@@ -2,13 +2,14 @@ package edu.wpi.teame.db;
 
 import com.opencsv.CSVReader;
 import com.opencsv.exceptions.CsvValidationException;
+import edu.wpi.teame.model.enums.DataBaseObjectType;
 import java.io.IOException;
 import java.sql.Date;
+import java.sql.SQLException;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
 
 public class CSVLineData {
   private List<String> headers = null;
@@ -16,49 +17,75 @@ public class CSVLineData {
   private String[] parsedData = null;
 
   public CSVLineData(CSVReader reader) throws IOException, CsvValidationException {
-    headers = Arrays.asList(reader.readNext());
+    String[] headerStrings = reader.readNext();
+    if (headerStrings == null || headerStrings.length == 0) {
+      return;
+    }
+
+    this.headers = new ArrayList<String>();
+    this.headers.addAll(List.of(headerStrings));
     this.csvReader = reader;
   }
 
-  public String getColumnString(String columnName) {
-    return parsedData[headers.indexOf(columnName)];
+  public boolean readNext() throws CsvValidationException, IOException {
+    parsedData = csvReader.readNext();
+    if (parsedData == null) {
+      return false;
+    }
+    return parsedData.length != 0;
+  }
+
+  public boolean readHeaders() {
+    return headers != null && headers.size() > 0;
+  }
+
+  public ISQLSerializable getDBObject(DataBaseObjectType objectType, String columnName)
+      throws SQLException {
+    int employeeCSVID = getColumnInt(columnName);
+    int employeeID = CSVManager.getInstance().getDBId(objectType, employeeCSVID);
+    return DBManager.getManager(objectType).get(employeeID);
   }
 
   public Date getColumnDate(String columnName) throws ParseException {
-    String dateString = parsedData[headers.indexOf(columnName)];
-    if (dateString.equals("")) {
+    String columnString = getSanitizedString(columnName);
+    if (columnString == null) {
       return null;
     }
+
     long time;
-    if (dateString.length() > 11) {
-      time = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss").parse(dateString).getTime();
+    if (columnString.length() > 11) {
+      time = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss").parse(columnString).getTime();
     } else {
-      time = new SimpleDateFormat("yyyy-MM-dd").parse(dateString).getTime();
+      time = new SimpleDateFormat("yyyy-MM-dd").parse(columnString).getTime();
     }
     return new Date(time);
   }
 
   public boolean getColumnBoolean(String columnName) {
-    return Boolean.parseBoolean(parsedData[headers.indexOf(columnName)]);
+    String columnString = getSanitizedString(columnName);
+    if (columnString == null) {
+      return false;
+    }
+    return Boolean.parseBoolean(columnString);
   }
 
   public int getColumnInt(String columnName) {
-    int colIndex = headers.indexOf(columnName);
-    if (Objects.equals(parsedData[colIndex], "")) {
+    String columnString = getSanitizedString(columnName);
+    if (columnString == null) {
       return 0;
     }
-    return Integer.parseInt(parsedData[colIndex].replace(" ", ""));
+    return Integer.parseInt(columnString);
   }
 
-  public List<String> getHeaders() {
-    return headers;
+  public String getColumnString(String columnName) {
+    return getSanitizedString(columnName);
   }
 
-  public String[] getParsedData() {
-    return parsedData;
-  }
-
-  public void setParsedData(String[] parsedData) {
-    this.parsedData = parsedData;
+  private String getSanitizedString(String columnName) {
+    String columnString = parsedData[headers.indexOf(columnName)].trim();
+    if (columnString.isEmpty() || columnString.isBlank()) {
+      return null;
+    }
+    return columnString;
   }
 }
